# web-admin

./: pyproject.toml  rxconfig.py
doc/: apuntes.md
